# kirov-server-emulator

./: README.md  config.example.json  kirov-server.spec  pyproject.toml  requirements-dev.txt  requirements.txt  run_server.py
.github/workflows/: ci.yml  release.yml
Report/: Report___DBUbLBLZUUyvLt9hwsFA_AAAAAwJzi4atayYzk_20260129_115642.json
app/: main.py  security.py
app/config/: app_settings.py
app/db/: crud.py  database.py
app/models/: fesl_types.py  game_config.py  irc_types.py  match_report.py  models.py  natneg_types.py  peerchat_state.py  relay_types.py  sessions.py
app/raw/: __init__.py  acct_factory.py  fesl.py  fesl_server.py  fsys_factory.py  gp_server.py  irc_factory.py  natneg_protocol.py  natneg_server.py  natneg_session.py  peerchat.py  query_master.py  session_manager.py
app/rest/: routes.py
app/servers/: __init__.py  fesl_handlers.py  fesl_server.py  gamestats_server.py  gp_server.py  natneg_server.py  peerchat_handlers.py  peerchat_server.py  port_pool.py  query_master_parsing.py  query_master_tcp.py  query_master_udp.py  relay_server.py  sessions.py
app/soap/: auth_service.py  clan_service.py  competition_service.py  envelope.py  sake_service.py  service.py
app/test/: run_fesl_test.py  test_auth_flow.py  test_fesl_live.py  test_fesl_parsing.py  test_gamespy_crypto.py  test_gamestats_server.py  test_generals_stats.py  test_gp_server.py  test_peerchat_live.py  test_peerchat_server.py  test_soap_models.py
app/util/: cipher.py  gamespy_crypto.py  generals_stats.py  logging_helper.py  natneg_protocol.py  paths.py  peerchat_crypt.py
docs/: AUTOMATCH.md  ELO_AND_RANKINGS.md  FESL.md  GP_SERVER.md  MASTER_SERVER.md  NATNEG.md  PEERCHAT.md  RELAY.md  STATS_AND_SOAP_FORMAT.md
static/: index.html  kw_ladder_fixed.csv  register.html  tw_ladder_fixed.csv
templates/: base.html  clan_create.html  clan_detail.html  clans.html  index.html  leaderboard.html  login.html  matches.html  player_profile.html
(+466 files in other folders)
